--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Muriel Silveira",
+  "author": "Muriel Silveira <murielkong@gmail.com>",
   "license": "ISC",
   "dependencies": {
     "react": "^0.14.7",
