--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "learning react",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "production": "webpack -p"
   },
   "author": "Muriel Silveira <murielkong@gmail.com>",
   "license": "ISC",
