--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "github-battle",
+  "name": "react-github-battle",
   "version": "1.0.0",
   "description": "learning react",
   "main": "index.js",
